added addR() function, adds row to end of grid

--- a/index.html
+++ b/index.html
@@ -20,9 +20,14 @@
         <option value="Green">Green</option>
         <option value="Yellow">Yellow</option>
     </select>
+
     <!-- Grid Table -->
     <table id="grid">
+        <!--This is where the table elements go with DOM manipulation-->
+        
+    
     </table>
+
     <!-- Script -->
     <script src="script.js"></script>
 </body>
